--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -16,6 +16,7 @@ LABEL io.k8s.description="Platform for building and running PHP 5.5 applications
       io.openshift.tags="builder,php,php55"
 
 # Install Apache httpd and PHP
+RUN yum install -y epel-release php5-mcrypt
 RUN yum install -y centos-release-scl && \
     INSTALL_PKGS="httpd24 php55 php55-php php55-php-mysqlnd php55-php-pgsql php55-php-bcmath php55-php-devel \
                   php55-php-fpm php55-php-gd php55-php-intl php55-php-ldap php55-php-mbstring php55-php-pdo \
