--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -21,6 +21,10 @@ RUN wget http://www6.atomicorp.com/channels/atomic/centos/7/x86_64/RPMS/atomic-p
 RUN wget http://www6.atomicorp.com/channels/atomic/centos/7/x86_64/RPMS/atomic-php55-php-imap-5.5.31-31.el7.art.x86_64.rpm
 RUN wget http://www6.atomicorp.com/channels/atomic/centos/7/x86_64/RPMS/atomic-php55-php-common-5.5.31-31.el7.art.x86_64.rpm
 RUN wget https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/l/libc-client-2007f-16.el7.x86_64.rpm
+RUN wget http://mirror.centos.org/centos/7/os/x86_64/Packages/libtool-ltdl-2.4.2-22.el7_3.x86_64.rpm
+RUN wget https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/l/libmcrypt-2.5.8-13.el7.x86_64.rpm
+RUN rpm -Uvh libmcrypt-2.5.8-13.el7.x86_64.rpm
+RUN rpm -Uvh libtool-ltdl-2.4.2-22.el7_3.x86_64.rpm
 RUN rpm -Uvh libc-client-2007f-16.el7.x86_64.rpm
 RUN rpm -Uvh atomic-php55-php-common-5.5.31-31.el7.art.x86_64.rpm
 RUN rpm -Uvh atomic-php55-php-imap-5.5.31-31.el7.art.x86_64.rpm
