--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -18,8 +18,20 @@ LABEL io.k8s.description="Platform for building and running PHP 5.5 applications
 # Install Apache httpd and PHP
 RUN yum install -y epel-release wget
 RUN yum-config-manager --enable rhel-server-rhscl-7-rpms
+RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-runtime-2.1-5.el7.remi.x86_64.rpm
+RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-php-common-5.5.38-12.el7.remi.x86_64.rpm
+RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-php-cli-5.5.38-12.el7.remi.x86_64.rpm
+RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-php-pear-1.10.12-2.el7.remi.noarch.rpm
+RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-runtime-2.1-5.el7.remi.x86_64.rpm
 RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-2.1-5.el7.remi.x86_64.rpm
+
+RUN rpm -Uvh php55-runtime-2.1-5.el7.remi.x86_64.rpm
+RUN rpm -Uvh php55-php-common-5.5.38-12.el7.remi.x86_64.rpm
+RUN rpm -Uvh php55-php-cli-5.5.38-12.el7.remi.x86_64.rpm
+RUN rpm -Uvh php55-php-pear-1.10.12-2.el7.remi.noarch.rpm
+RUN rpm -Uvh php55-runtime-2.1-5.el7.remi.x86_64.rpm
 RUN rpm -Uvh php55-2.1-5.el7.remi.x86_64.rpm
+
 ENV INSTALL_PKGS="httpd24 php55 php55-php php55-php-mysqlnd php55-php-pgsql php55-php-bcmath php55-php-devel \
                   php55-php-fpm php55-php-gd php55-php-intl php55-php-ldap php55-php-mbstring php55-php-pdo \
                   php55-php-pecl-memcache php55-php-process php55-php-soap php55-php-opcache php55-php-xml \
