--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -16,7 +16,8 @@ LABEL io.k8s.description="Platform for building and running PHP 5.5 applications
       io.openshift.tags="builder,php,php55"
 
 # Install Apache httpd and PHP
-RUN yum install -y epel-release wget
+RUN yum install -y epel-release wget install policycoreutils-python
+RUN /usr/sbin/setenforce 0
 RUN yum-config-manager --enable rhel-server-rhscl-7-rpms
 RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-runtime-2.1-5.el7.remi.x86_64.rpm
 RUN wget https://rpms.remirepo.net/enterprise/7/remi/x86_64/php55-php-common-5.5.38-12.el7.remi.x86_64.rpm
