--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -38,17 +38,17 @@ COPY ./root/ /
 # In order to drop the root user, we have to make some directories world
 # writeable as OpenShift default security model is to run the container under
 # random UID.
-#RUN sed -i -f /opt/app-root/etc/httpdconf.sed /opt/rh/httpd24/root/etc/httpd/conf/httpd.conf && \
-#    sed -i '/php_value session.save_path/d' /opt/rh/httpd24/root/etc/httpd/conf.d/php55-php.conf && \
-#    echo "IncludeOptional /opt/app-root/etc/conf.d/*.conf" >> /opt/rh/httpd24/root/etc/httpd/conf/httpd.conf && \
-#    head -n151 /opt/rh/httpd24/root/etc/httpd/conf/httpd.conf | tail -n1 | grep "AllowOverride All" || exit && \
-#    mkdir /tmp/sessions && \
-#    chown -R 1001:0 /opt/app-root /tmp/sessions && \
-#    chmod -R a+rwx /tmp/sessions && \
-#    chmod -R ug+rwx /opt/app-root && \
-#    chmod -R a+rwx /opt/rh/php55/root/etc && \
-#    chmod -R a+rwx /opt/rh/httpd24/root/var/run/httpd
-
+RUN sed -i -f /opt/app-root/etc/httpdconf.sed /opt/rh/httpd24/root/etc/httpd/conf/httpd.conf && \
+    sed -i '/php_value session.save_path/d' /opt/rh/httpd24/root/etc/httpd/conf.d/php55-php.conf && \
+    echo "IncludeOptional /opt/app-root/etc/conf.d/*.conf" >> /opt/rh/httpd24/root/etc/httpd/conf/httpd.conf && \
+    head -n151 /opt/rh/httpd24/root/etc/httpd/conf/httpd.conf | tail -n1 | grep "AllowOverride All" || exit && \
+    mkdir /tmp/sessions && \
+    chown -R 1001:0 /opt/app-root /tmp/sessions && \
+    chmod -R a+rwx /tmp/sessions && \
+    chmod -R ug+rwx /opt/app-root && \
+    chmod -R a+rwx /opt/rh/php55/root/etc && \
+    chmod -R a+rwx /opt/rh/httpd24/root/var/run/httpd
+    
 USER 1001
 
 # Set the default CMD to print the usage of the language image
