--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -33,6 +33,8 @@ RUN yum -y clean all --enablerepo='*'
 
 # Copy the S2I scripts from the specific language image to $STI_SCRIPTS_PATH
 COPY ./s2i/bin/ $STI_SCRIPTS_PATH
+mkdir -p /usr/libexec/s2i
+COPY ./s2i/ /usr/libexec/s2i/
 
 # Copy extra files to the image.
 COPY ./root/ /
