--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -71,6 +71,7 @@ COPY ./s2i/bin/ $STI_SCRIPTS_PATH
 COPY ./root/ /
 
 # Reset permissions of filesystem to default values
+RUN php -m
 RUN /usr/libexec/container-setup && rpm-file-permissions
 
 USER 1001
