--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -56,8 +56,8 @@ RUN wget https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/l/li
 RUN wget https://dl.iuscommunity.org/pub/ius/archive/CentOS/7/x86_64/php70u-mcrypt-7.0.33-1.ius.centos7.x86_64.rpm
 RUN wget https://dl.iuscommunity.org/pub/ius/archive/CentOS/7/x86_64/php70u-common-7.0.33-1.ius.centos7.x86_64.rpm
 
-RUN rpm -Uvh libtool-ltdl-2.4.2-22.el7_3.x86_64.rpm
-RUN rpm -Uvh libmcrypt-2.5.8-13.el7.x86_64.rpm
+#RUN rpm -Uvh libtool-ltdl-2.4.2-22.el7_3.x86_64.rpm
+#RUN rpm -Uvh libmcrypt-2.5.8-13.el7.x86_64.rpm
 RUN rpm -Uvh php70u-common-7.0.33-1.ius.centos7.x86_64.rpm
 RUN rpm -Uvh php70u-mcrypt-7.0.33-1.ius.centos7.x86_64.rpm
 RUN sed -i '/\[mcrypt\]/a\extension=mcrypt.so' /etc/opt/rh/rh-php70/php.ini
