--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -86,11 +86,15 @@ COPY ./root/ /
 
 # Reset permissions of filesystem to default values
 RUN /usr/libexec/container-setup && rpm-file-permissions
+
 RUN sed -i "s/^\(.*\)define\(.*\)SMART_HOST\(.*\)$/define\2SMART_HOST\3/" /etc/mail/sendmail.mc
 RUN sed -i "s/smtp.your.provider/relay.imss.gob.mx/" /etc/mail/sendmail.mc
 RUN sed -i "s/Port=smtp,Addr=127.0.0.1/Port=smtp/" /etc/mail/sendmail.mc
 RUN m4 /etc/mail/sendmail.mc > /etc/mail/sendmail.cf 
 RUN make -C /etc/mail 
+RUN hostnamectl set-hostname registry.sbnt.imss.gob.mx
+RUN echo "registry.sbnt.imss.gob.mx" >> /etc/hosts
+
 USER 1001
 
 # Set the default CMD to print the usage of the language image
