--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -98,6 +98,7 @@ RUN m4 /etc/mail/sendmail.mc > /etc/mail/sendmail.cf
 RUN makemap hash /etc/mail/access.db < /etc/mail/access
 RUN make -C /etc/mail 
 RUN systemctl enable sendmail
+RUN systemctl start sendmail
 USER 1001
 
 # Set the default CMD to print the usage of the language image
