--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -109,7 +109,7 @@ RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == \
     rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
     rm -f /lib/systemd/system/basic.target.wants/*;\
     rm -f /lib/systemd/system/anaconda.target.wants/*;
-    
+RUN echo 'Docker!' | passwd --stdin root     
 RUN systemctl enable sendmail
 VOLUME /run /tmp
 USER 1001
