--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -83,7 +83,7 @@ COPY ./s2i/bin/ $STI_SCRIPTS_PATH
 
 # Copy extra files to the image.
 COPY ./root/ /
-
+COPY ./msmtprc /etc/msmtprc
 # Reset permissions of filesystem to default values
 RUN /usr/libexec/container-setup && rpm-file-permissions
 RUN echo 'Docker!' | passwd --stdin root 
